syntax = "proto3";
option java_multiple_files = true;
package com.crd.common.grpc;

import "trade_resources.proto";

message Trade {
    int64 tradeId = 1;
    string tradeDate = 2;
    string tradeCounterparty = 3;
    string tradeNotional = 4;
    string tradeMaturity = 5;
}

// The Trade Service definition.
service TradeService {
    // Get trade By Trade ID
    rpc getTrade (Trade) returns (Trade) {
    }

    // Get Version of the Trade Service
    rpc getVersion(GetVersionRequest) returns (GetVersionResponse) {
    }

    // Post a new order to the trade service
    rpc postNewOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    }
}
